<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Up2date</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="title_activity_add_program">AddProgram</string>
    <string name="programName">节目名</string>
    <string name="title_activity_week_dialog">WeekDialog</string>
    <string name="title_week">选择播出时间</string>
    <string name="program_hint">填写节目名称</string>
    <string name="label_selectweek">选择节目名称</string>
    <string name="hint_selectweek">选择播放时间</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="hint_selectedweek">已选择的日期</string>
    <string name="hint_selectbegindate">选择开始追的日期</string>
    <string name="hint_selectedbegindate">已选择的日期</string>
    <string name="label_add_program">确定</string>
    <string name="title_activity_program">ProgramActivity</string>
    <string name="onItemDelete">删除</string>
    <string name="delete_program">删除</string>
    <string name="radio_date">播出日期</string>
    <string name="radio_episode">期数</string>
    <string name="radio_both">两者</string>
    <string name="hint_selectrecordtype">选择记录方式</string>
    <string name="hint_selectdaysdelay">选择提醒推迟时间</string>
    <string name="hint_selectepisode">选择期数</string>


</resources>
